Modularize CSS and fixed trainer spacing around links

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -2,32 +2,19 @@
 .navbar-nav {
   margin-left: 30%;
 }
-.training-banner .slider-info h3 {
-  font-weight: 600;
-  margin-top: 3em;
-  text-align: center;
-}
-.courses-banner .slider-info h3 {
-  font-weight: 600;
-  text-align: center;
-}
-
 .social-icons-agileits {
   margin-top: 1em;
 }
-
 .serv-inner1 .title {
   color: #111;
   font-weight: 600;
 }
-
 #about-page .banner, #trainers-page .banner {
   min-height: 180px !important;
 }
-
 .team-section .trainer-area {
-  margin-bottom: 2em;
   padding: 1.5em;
+  margin-bottom: 2em;
 }
 .team-section .trainer-area:nth-child(even) {
   background-color: ghostwhite;
@@ -40,6 +27,8 @@
   color: white;
   padding: 1em;
   text-align: left;
+  width: 100%;
+  margin: 0;
 }
 .trainer-area .trainer-pic {
   background: #e6e6e6;
@@ -49,14 +38,12 @@
 .mb-1 {
   margin-bottom: 1em;
 }
-
 .navbar-nav>li.active,
 .navbar-default .navbar-nav>li:hover,
 .navbar-default .navbar-nav>li:focus {
 	background: #f06292;
 	color: white !important;
 }
-
 .nav > li > a {
   padding: 10px;
 }
@@ -80,66 +67,13 @@
   font-size: 22px;
   background: #00b6e3;
 }
-/* Training */
-.courses-list {
-  padding: 2em 0;
-}
-
-.courses-list .tab-content {
-  padding: 1em;
-  box-shadow: 1px 1px 4px #111;
-}
-
-.courses-list .nav-tabs img {
-  height: 50px;
-}
-
-.courses-list .tab-content .row {
-  margin: 0;
-}
-.courses-list .tab-content .qns-box {
-  margin-bottom: 1.5em;
-}
-.courses-list .tab-content .col-md-6, .courses-list .tab-content .col-sm-12 {
-  padding: 0;
-}
-
-.training-banner {
-	background: url($baseurl + "/assets/images/career-focussed.jpg")no-repeat 0px 0px;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	-ms-background-size: cover;
-	background-size: cover;
-	position: relative;
-	height: 420px;
-}
-.courses-banner {
-	background: url($baseurl + "/assets/images/courses.jpg")no-repeat 0px 0px;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	-ms-background-size: cover;
-	background-size: cover;
-	position: relative;
-	height: 550px;
-}
 .mb-1 {
   margin-bottom: 1em !important;
 }
 .mb-2 {
   margin-bottom: 2em !important;
 }
-.technologies {
-  text-align: center;
-}
-.course-content-box, .qns-box-list {
-  border: 1px solid #C2BEC6;
-  list-style: none;
-  text-align: left;
-  padding: 5px;
-  font-size: 0.8em;
-}
+
 .course-content-box .fa-check-circle, .qns-box-list .fa-check-circle,
 .card .card-body .card-content-list .fa-star {
   float: left;
@@ -161,23 +95,6 @@
 }
 .fab.fa-css3 {
   color: skyblue;
-}
-
-.training-list {
-  margin: 2em 0;
-}
-.training-list .card {
-  padding: 0.5em;
-}
-.training-list .card .card-body {
-  padding: 0.5em 0;
-}
-.training-list .card .card-content-list {
-  list-style: none;
-  font-size: 0.8em;
-}
-.training-list .card img {
-  width: 100%;
 }
 
 // upcoming actions
@@ -208,38 +125,6 @@
   color: yellow;
 }
 
-
-@media (max-width: 768px) {
-  .team-section .trainer-area {
-    padding: 0.5em;
-  }
-  .courses-list .nav-tabs img {
-    height: 20px;
-  }
-  .courses-list .nav-tabs a {
-    font-size: 15px;
-  }
-  .training-banner {
-    background: url($baseurl + "/assets/images/career-focussed-small.jpg")no-repeat 0px 0px !important;
-    height: 300px !important;
-    background-size: cover !important;
-  }
-  .courses-banner {
-    background: url($baseurl + "/assets/images/courses-small.jpg")no-repeat 0px 0px !important;
-    height: 300px !important;
-    background-size: cover !important;
-  }
-}
-@media (max-width: 450px) {
-  .training-banner {
-    height: 250px !important;
-  }
-}
-@media (max-width: 360px) { 
-  .courses-list .nav-tabs a {
-    font-size: 13px;
-  }
-  .nav > li > a {
-    padding: 5px;
-  }
-}
+@import "trainings";
+@import "courses";
+@import "responsive";
